fixed light mode and dark mode

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -25,6 +25,10 @@ p {
 	background-color: #333;
 }
 
+i {
+	color: white;
+}
+
 input {
 	background-color: #fff;
 	transition: background-color 0.3s;
