--- a/css/light-theme.css
+++ b/css/light-theme.css
@@ -7,8 +7,8 @@ a {
 }
 
 .title {
-	background-color: #37e683;
-	color: white;
+	background-color: white;
+	color: black;
 }
 
 .radio {
