--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,6 @@ textarea {
 }
 
 h1 {
-	background-color: #37e683;
 	margin: 0;
 	font-size: 18px;
 }
@@ -127,6 +126,15 @@ h1 {
 p {
 	text-align: center;
 	font-size: 18px;
+}
+
+i {
+	font-size: 50px;
+	cursor: pointer;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 table {
